--- a/SistemaEscola/src/br/sistemaescola/views/LoginJFrame.form
+++ b/SistemaEscola/src/br/sistemaescola/views/LoginJFrame.form
@@ -100,6 +100,7 @@
   <SubComponents>
     <Component class="javax.swing.JTextField" name="userJTextField">
       <AuxValues>
+        <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="userJTextField.addKeyListener(actionTeclado);"/>
         <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
       </AuxValues>
     </Component>
@@ -128,6 +129,9 @@
       </AuxValues>
     </Component>
     <Component class="javax.swing.JPasswordField" name="passwordJField">
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="passwordJField.addKeyListener(actionTeclado);"/>
+      </AuxValues>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
