--- a/SistemaEscola/src/br/sistemaescola/views/GerenciadorFaltasJInternalFrame.form
+++ b/SistemaEscola/src/br/sistemaescola/views/GerenciadorFaltasJInternalFrame.form
@@ -25,17 +25,18 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
-              <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
-                              <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
+                      <Component id="jPanel1" max="32767" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="1" attributes="0">
+                          <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="idJTextField" alignment="1" min="-2" pref="168" max="-2" attributes="0"/>
                           <Component id="nomeJTextField" alignment="1" min="-2" pref="168" max="-2" attributes="0"/>
@@ -48,7 +49,6 @@
                       <EmptySpace type="unrelated" max="32767" attributes="0"/>
                       <Component id="jPanel2" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="jPanel1" alignment="0" max="32767" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
           </Group>
@@ -189,11 +189,12 @@
             <Component class="javax.swing.JTable" name="tabelaJTable">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="8" rowCount="0">
+                  <Table columnCount="9" rowCount="1">
+                    <Column editable="true" title="C&#xf3;digo" type="java.lang.Object"/>
                     <Column editable="false" title="Disiciplina" type="java.lang.Object"/>
                     <Column editable="false" title="Dia" type="java.lang.Object"/>
-                    <Column editable="false" title="mes" type="java.lang.Object"/>
-                    <Column editable="false" title="ano" type="java.lang.Object"/>
+                    <Column editable="false" title="Mes" type="java.lang.Object"/>
+                    <Column editable="false" title="Ano" type="java.lang.Object"/>
                     <Column editable="false" title=" Periodo 1" type="java.lang.Object"/>
                     <Column editable="false" title=" Periodo 2" type="java.lang.Object"/>
                     <Column editable="false" title=" Periodo 3" type="java.lang.Object"/>
@@ -338,7 +339,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Id:"/>
+        <Property name="text" type="java.lang.String" value="C&#xf3;digo:"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="idJTextField">
